--- a/indoor.html
+++ b/indoor.html
@@ -149,7 +149,7 @@
                             </div>
 
                             <div class="indoorslideimage">
-                                <img src="images/succulent/plant (38).jpg" class="img indoorslide">
+                                <img src="images/Succulent/plant (38).jpg" class="img indoorslide">
                             </div>
 
                             <div class="indoorslideimage">
@@ -157,7 +157,7 @@
                             </div>
 
                             <div class="indoorslideimage">
-                                <img src="images/succulent/plant (37).jpg" class="img indoorslide">
+                                <img src="images/Succulent/plant (37).jpg" class="img indoorslide">
                             </div>
 
                             <div class="indoorslideimage">
