--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <div class="container logom">
             <div class="images logo">
-                <img src="images/Main/logo (2).png" class="img">
+                <img src="images/Main/favicon.ico.png" class="img">
                 <p>Plantsotre</p>
             </div>
             <div class="menu">
@@ -190,7 +190,7 @@
                 <div data-aos="zoom-in">
                     <div class="plant_tp_card">
                         <div class="image">
-                            <img src="images/Outdoor/plant (30).jpg" class="img planttttypes">
+                            <img src="images/outdoor/plant (30).jpg" class="img planttttypes">
                         </div>
                         <div class="plant_tp">
                             <h1>outdoor</h1>
@@ -227,7 +227,7 @@
                 <div data-aos="zoom-in">
                     <div class="plant_tp_card">
                         <div class="image">
-                            <img src="images/Bonsai/plant (37).jpg" class="img planttttypes">
+                            <img src="images/bonsai/plant (37).jpg" class="img planttttypes">
                         </div>
                         <div class="plant_tp">
                             <h1>bonsai</h1>
