--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <div class="container logom">
             <div class="images logo">
-                <img src="images/Main/favicon.ico.png" class="img">
+                <img src="images/Main/favicon.ico" class="img">
                 <p>Plantsotre</p>
             </div>
             <div class="menu">
