--- a/register.html
+++ b/register.html
@@ -15,7 +15,7 @@
 
         <div class="container logom">
             <div class="images logo">
-                <img src="images/Main/logo (2).png" class="img">
+                <img src="images/Main/favicon.ico" class="img">
                 <p>Plantsotre</p>
             </div>
             <div class="menu">
